<resources>
    <!--Contains all of the string resources used in the App-->
    <string name="app_name">GenZGPT</string>
    <string name="qr_code_image_desc">QR Code Image</string>
    <string name="save_qr_code">Save</string>
    <string name="cancel_qr_code">Cancel</string>

    <string name="attendees">Attendees</string>
    <string name="back">Back</string>

    <string name="test_channel">Should be deleted later.</string>
    <string name="test_channel_description">Should be deleted later</string>
    <string name="number">number:</string>
    <string name="total">N</string>
    <string name="events">My Events</string>
    <string name="capture">Capture</string>
    <string name="request_permissions">Request Permissions</string>
    <string name="this_app_requires_camera_and_storage_permissions_to_function_properly">This app requires camera and storage permissions to function properly.</string>
    <string name="user_list">Profiles</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_email">User Email</string>
    <string name="all_events">All Events</string>
    <string name="event_name">Event Name</string>
    <string name="event_location">Event Location</string>
    <string name="event_start">Event Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="withdraw">Withdraw</string>
    <string name="sign_up">Sign Up</string>
    <string name="my_events">My Events</string>
    <string name="black_and_white">Black and White</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

</resources>