<?xml version="1.0" encoding="utf-8"?>
<!--The formatting for saving a QR code in the app.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/qrCodeImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/qr_code_image_desc"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/saveQRCodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_qr_code"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/cancelQRCodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_qr_code"/>
    </LinearLayout>

</LinearLayout>
