<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">

    <!-- Back Arrow -->
    <ImageView
        android:id="@+id/backArrowImageView"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:src="@drawable/ic_back_arrow"
        android:contentDescription="@string/back" />

    <!-- Title TextView -->
    <TextView
        android:id="@+id/toolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Registered"
        android:textSize="34sp" />

    <!-- RecyclerView for the list of attendees -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/registeredRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarTitle"
        android:padding="6dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@+id/number_of_attendees"
        android:text="@string/number"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/number_of_attendees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        android:text="@string/total"
        android:textSize="20sp" />

</RelativeLayout>