<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9D9D9">

    <TextView
        android:id="@+id/sign_in_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_outline"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gpt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="631dp"
        android:text="GENZGPT"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in_container"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_container"
        app:layout_constraintStart_toStartOf="@+id/sign_in_container"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:text="Please fill out the following information to use this app:"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_container"
        app:layout_constraintStart_toStartOf="@+id/sign_in_container"
        app:layout_constraintTop_toBottomOf="@+id/gpt_title" />

    <EditText
        android:id="@+id/last_name_fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edit_text_outline"
        android:ems="15"
        android:hint="@string/last_name"
        android:imeOptions="actionDone"
        android:inputType="textCapWords"
        android:maxLength="50"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_container"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_info" />

    <EditText
        android:id="@+id/email_fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edit_text_outline"
        android:ems="15"
        android:hint="@string/user_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_container"
        app:layout_constraintStart_toStartOf="@+id/sign_in_container"
        app:layout_constraintTop_toBottomOf="@+id/last_name_fill" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edit_text_outline"
        android:ems="15"
        android:hint="Phone Number"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_container"
        app:layout_constraintStart_toStartOf="@+id/sign_in_container"
        app:layout_constraintTop_toBottomOf="@+id/email_fill" />

    <Spinner
        android:id="@+id/theme_spinner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edit_text_outline"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_container"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/sign_in_container"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone" />

    <TextView
        android:id="@+id/geo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="150dp"
        android:text="Geolocation Tracking"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_container"
        app:layout_constraintStart_toStartOf="@+id/sign_in_container"
        app:layout_constraintTop_toBottomOf="@+id/theme_spinner" />

    <Switch
        android:id="@+id/geolocation_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_outline"
        android:shadowColor="#C5C5C5"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_container"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/geo_text"
        app:layout_constraintTop_toBottomOf="@+id/theme_spinner" />

    <EditText
        android:id="@+id/first_name_fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_outline"
        android:ems="15"
        android:hint="@string/first_name"
        android:inputType="textCapWords"
        android:maxLength="50"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/last_name_fill"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_container"
        app:layout_constraintStart_toStartOf="@+id/sign_in_container"
        app:layout_constraintTop_toBottomOf="@+id/first_info" />

    <Button
        android:id="@+id/user_profile_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="Create User Profile"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in_container"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_container"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/sign_in_container"
        app:layout_constraintTop_toBottomOf="@+id/geo_text"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/admin_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:text="Sign In As Administrator"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_container"
        app:layout_constraintStart_toStartOf="@+id/sign_in_container"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_button" />

</androidx.constraintlayout.widget.ConstraintLayout>